--- a/app/views/users/_list.html.haml
+++ b/app/views/users/_list.html.haml
@@ -1,16 +1,30 @@
-%ul.big_list
-  - @users.each do |u|
-    %li
-      %p.float_left.gutter_right_half
-        %img{src: u.user_avatar_url["px_48x48"]}
-      %p.float_left
-        = link_to u.name || u.username, u
-        - if u.name
-          %br
-          %b= u.username
-      %form.float_right.gutter_top_half{method: "post", onsubmit: "return false"}
-        - if current_user && current_user.following_username_list.include?(u.username)
-          %button{title: "#{t('users.unfollow')} #{u.name || u.username}"}= t('users.unfollow')
-        - else
-          %button{title: "#{t('users.follow')} #{u.name || u.username}"}= t('users.follow')
+- if @users.empty?
+  %p= @empty_message.html_safe
+- else
+  %ul.big_list
+    - @users.each do |u|
+      = puts "!@# this asdf user id is #{u.id}"
+      %li
+        - if u.user_avatar_url
+          %p.float_left.gutter_right_half
+            %img{src: u.user_avatar_url.px_48x48}
+        %p.gutter_top_half.float_left
+          = link_to u.name || u.username, u
+          - if u.name
+            %br
+            %b= u.username
+        = puts "!@# list is #{current_user.following_user_id_list}, this one is #{u.id}, classes are #{current_user.following_user_id_list.first.class} and #{u.id.class}"
+        %div.float_right{style: "text-align: right;"}
+          - if current_user && current_user.following_user_id_list.include?(u.id.to_i)
+            = puts "true"
+            %form{action: user_unfollow_path(u.username), method: "post"}
+              %button{title: "#{t('users.unfollow')} #{u.name || u.username}"}= t('users.unfollow')
+          - else
+            = puts "false"
+            %form{action: user_follow_path(u.username), method: "post"}
+              %button{title: "#{t('users.follow')} #{u.name || u.username}"}= t('users.follow')
 
+          - if current_user && current_user.follower_user_id_list.include?(u.id.to_i)
+            %div.mute= t('user follows', user: u.username)
+          - else
+            %div.mute= t('user does not follow', user: u.username)
