--- a/app/views/users/connections.html.haml
+++ b/app/views/users/connections.html.haml
@@ -1,7 +1,6 @@
 - @title = "#{t('users.connected accounts')} | #{@user.name || @user.username}"
 
-%p Connect to:
-%ul
-  %li= link_to "Twitter", new_connection_path("twitter", redirect: connections_path(show: "twitter"))
-  %li= link_to "Facebook", new_connection_path("facebook", redirect: connections_path(show: "facebook"))
+%p= t('connection marketing') 
+= render partial: "connections_tabs"
+
 
