--- a/app/views/users/sign_up_success.html.haml
+++ b/app/views/users/sign_up_success.html.haml
@@ -1,2 +1,5 @@
 %article
   %h1= t('users.welcome to youversion')
+  %h2= t('next step connections')
+  %p= t('connection marketing') 
+  = render partial: "connections_tabs"
