--- a/app/views/users/_user_info.html.haml
+++ b/app/views/users/_user_info.html.haml
@@ -12,3 +12,5 @@
           %li.icon_small_location= user.location
         - if user.website
           %li.icon_small_link= link_to user.website, user.website
+        - if user.bio
+          %li= user.bio
