--- a/app/views/users/_user_tabs.html.haml
+++ b/app/views/users/_user_tabs.html.haml
@@ -3,7 +3,7 @@
     %a{href: user_path(@user)}
       %span= t('users.recent activity')
   %li{class: ("highlighted" if selected == :friends)}
-    %a{href: user_friends_path(@user)}
+    %a{href: user_followers_path(@user)}
       %span= t('friends')
   %li{class: ("highlighted" if selected == :notes)}
     %a{href: user_notes_path(@user)}
@@ -11,9 +11,6 @@
   %li{class: ("highlighted" if selected == :bookmarks)}
     %a{href: user_bookmarks_path(@user)}
       %span= t('bookmarks.title')
-  %li{class: ("highlighted" if selected == :plans)}
-    %a
-      %span= t('plans.title')
   %li{class: ("highlighted" if selected == :likes)}
     %a
       %span= t('likes.likes')
