--- a/app/views/search/show.html.haml
+++ b/app/views/search/show.html.haml
@@ -3,23 +3,38 @@
 - @sidebar = false
 
 %article
-  %h1= t("search")
-  .split_pane{:style => "padding-top:15px"}
+  %h4.float_left= t('searching.total results', total: number_to_human(@query.total_results, :precision => 2).downcase!, query: "<i>#{@query.query}</i>").html_safe
+  - if @query.suggestion
+    %span{style: "margin-left: 20px"}
+      = "(#{t('searching.suggestion html', suggestion_link: (link_to @query.suggestion, search_path(q: @query.suggestion)))})".html_safe
+  .split_pane{:style => "padding-top:15px; clear: left"}
     .split_pane_sidebar
       %dl.categories_menu
         %dt
           %div{style: "text-align: center; margin-bottom: 5px"}
-            = t('searching.total results', total: number_to_human(@query.total_results, :precision => 2).downcase!)
+            %h3{style: "margin-bottom: 10px"}= t("search")
         - Search.categories.each do |category|
-          %dd{class: @category == category ? "highlighted" : ""}
+          %dd{class: @query.category == category ? "highlighted" : ""}
             %a{href: search_path(category: category, q: params[:q])}
               = t("searching.#{category}") 
-              = "(#{@query.results[category].total || 0})"
+              = "(#{@query.raw_results[category].total || 0})"
     .split_pane_content
-      - if @query.results[@category].items?
-        %ul.big_list
-          - @query.results[@category].items.each do |item|
-            = render partial: "#{@category}_list_item", locals: {item: item}
-        = render "shared/pagination", resource_list: @query.results[@category]
+      - if @query.raw_results[@query.category].items?
+        - if @query.category == :bible
+          %form{method: 'get'}
+            %input{type: "hidden", name: "q", value: @query.query}
+            %input{type: "hidden", name: "category", value: :bible}
+            %div{style: "clear: both"}
+              %select.float_right{onChange: "this.form.submit()", style: "margin-right: 5px; margin-top: 10px; margin-bottom: 25px; width: 550px", name: "version"}
+                - Version.all_by_language.each do |k, v|
+                  %optgroup{label: Version.languages[k]}
+                  - if locale.to_s == k
+                    %option{value: "", selected: @query.version.nil?}= t("searching.all versions", language_name: t("language name"))
+                  - v.each do |k, v|
+                    %option{value: k.to_s, selected: k == (@query.version)}= v
+        %ul.big_list{style: "clear:both"}
+          - @query.raw_results[@query.category].items.each do |item|
+            = render partial: "#{@query.category}_list_item", locals: {item: item}
+        = render "shared/pagination", resource_list: @query.result_list(@query.category)
       - else
         .none{align: "center"}= "No matching results"
