--- a/app/views/references/show.html.haml
+++ b/app/views/references/show.html.haml
@@ -60,15 +60,15 @@
           %span.icon_parallel
             =t("ref.parallel")
 
-%article{"data-selected-verses" => "[#{@verses}]", "data-fullscreen" =>@full_screen, "data-highlights" => @highlights.to_json, "data-book" => @reference[:book].to_s, "data-book-api" => @reference[:book].sub(/[a-z]/) {|m| m.upcase}, "data-book-human" => @version.books[@reference[:book]].human, "data-chapter" => @reference[:chapter].to_s, "data-version" => @reference[:version].to_s}
+%article{"data-selected-verses" => "[#{@verses}]", "data-fullscreen" =>@full_screen, "data-book" => @reference[:book].to_s, "data-book-api" => @reference[:book].sub(/[a-z]/) {|m| m.upcase}, "data-book-human" => @version.books[@reference[:book]].human, "data-chapter" => @reference[:chapter].to_s, "data-version" => @reference[:version].to_s}
   = link_to(@reference.previous, bible_path(@reference.previous), class: "nav_prev") if @reference.previous
   = link_to(@reference.next, bible_path(@reference.next), class: "nav_next") if @reference.next
-  #version_primary
+  #version_primary{"data-highlights" => @highlights.to_json}
     - @reference.contents.each do |r|
       = r.html_safe
   -# TODO: Make boom sauce, to compliment the awesome sauce.
   -# Aka: Make this thing output a secondary Bible version, KJV or sumthin'.
-  #version_secondary
+  #version_secondary{"data-highlights" => @alt_highlights.to_json}
     - @alt_reference.contents.each do |r|
       = r.html_safe
 
