added locale support, fixes #87

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -32,4 +32,4 @@
       %span
         %select{:id => 'choose_language', :name => 'choose_language'}
           - I18n.available_locales.each do |loc|
-            %option{value: loc, href: url_for(params.merge!(locale: loc)), selected: loc == I18n.locale}= t("language name", locale: loc)
+            %option{value: url_for(params.merge({locale: loc})), selected: loc == I18n.locale}= t("language name", locale: loc)
