--- a/app/views/users/new_facebook.html.haml
+++ b/app/views/users/new_facebook.html.haml
@@ -19,6 +19,6 @@
       = f.password_field :password
     %p
       = f.check_box :agree
-      = f.label :agree, t("users.agreement")
+      = f.label :agree, t("users.agreement", terms_link: link_to(t("users.terms and conditions"), terms_url())).html_safe
     %p
       = f.submit t("users.register")
