--- a/app/views/users/devices.html.haml
+++ b/app/views/users/devices.html.haml
@@ -5,6 +5,6 @@
     %li
       %div.float_right.caution= link_to t('remove'), device_path(d.id), method: :delete, confirm: t('are you sure')
       %h4= "#{d.vendor} #{d.model}"
-      %p.small.mute.negative_gutter_top_half
+      %p.mute.negative_gutter_top_half
         = d.os
         = "(#{t('registered')} #{time_ago_in_words(d.created_date)} #{t('ago')})"
