added lock icon on notes, fixes #122

--- a/app/assets/sass/_widgets.sass
+++ b/app/assets/sass/_widgets.sass
@@ -337,6 +337,15 @@ a.more_arrow:hover
   padding-left: 25px
   background: url(../images/icon_lock.png) no-repeat 4px center
 
+.private:after
+  padding-left: 0.4em
+  content: url(../images/icon_lock.png)
+
+.draft:after
+  content: "(draft)"
+  color: red
+  font-weight: normal
+
 .parallel_notes .publish_on_selected select
   width: 91%
 .parallel_notes section form fieldset
