--- a/app/views/notes/_list_item.html.haml
+++ b/app/views/notes/_list_item.html.haml
@@ -1,7 +1,14 @@
 %li{id: list_item.id, class: ("li_note" if display == :icon)}
-  %h5
-    %a{href: note_path(list_item.id), class: ("highlight" if list_item.highlight_color), style: ("background-color: ##{list_item.highlight_color}" if list_item.highlight_color)}= list_item.title
+  - if display == :avatar
+    .float_left
+      %a{href: user_path(list_item.username)}
+        %img.avatar_large{src: list_item.user_avatar_url.px_48x48}
+  %div{style: ("margin-left: 60px;" if display == :avatar)}
+    %h5{class: list_item.user_status}
+      %a{href: note_path(list_item.id), class: ("highlight" if list_item.highlight_color), style: ("background-color: ##{list_item.highlight_color}" if list_item.highlight_color)}= list_item.title
+    - if display == :avatar
+      %p.mute.small.negative_gutter_top_half
+        %a{href: user_path(list_item.username)}= list_item.username
 
-  %p.mute.small.negative_gutter_top_half= link_to_references(list_item.reference_list) 
-  %p= list_item.content
-  %div{class: "status"}= list_item.user_status
+    %p= list_item.content
+    %p.mute.small.negative_gutter_top_half= link_to_references(list_item.reference_list) 
