--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -25,7 +25,7 @@
     %h1= t("notes.all notes")
   - unless @notes.empty?
     %ul.big_list
-      = render partial: "list_item", collection: @notes
+      = render partial: "list_item", collection: @notes, locals: {display: :avatar}
     = render "shared/pagination", resource_list: @notes
   - else
     %div{class: "none"}= t("notes.not found")
