--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,9 +26,9 @@
       = render '/shared/footer'
     - if @reader_menus == true
       -# = render '/shared/menu_book_chapter'
-      = render_cell :book_selector, :display, reference: @reference
+      = render_cell :book_selector, :display, {reference: @reference, version: @version}
       -# = render '/shared/menu_version'
-      = render_cell :version_selector, :display, {reference: @reference, alt_reference: @alt_reference}
+      = render_cell :version_selector, :display, {reference: @reference, alt_reference: @alt_reference, version: @version}
       = render '/shared/menu_bookmark'
       = render '/shared/menu_settings'
       = render '/shared/menu_audio_player'
