added donate link to footer

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -23,7 +23,7 @@
     %a{:href => '#'}=t("support")
     %span.separator
       |
-    %a{:href => '#'}=t("donate title")
+    %a{:href => donate_path}=t("donate title")
   %p.float_right
     %label{:for => 'choose_language'}
       =t("choose language field")
