--- a/app/assets/sass/_form_elements.sass
+++ b/app/assets/sass/_form_elements.sass
@@ -324,7 +324,7 @@ input[type="week"]:active
   +box-shadow(inset rgba(#000, 0.1) 0 1px 1px 0, #fff 0 1px 0 0, $blue_light 0 0 5px 0, #eeedeb 0 0 0 5px)
 
 input[type="search"]
-  padding-right: 0px !important
+  padding-right: 1px
   -webkit-appearance: none
 
 button.color
