added support for .autofocus class (sets focus to classed element on page load)

--- a/app/views/shared/_javascripts.html.haml
+++ b/app/views/shared/_javascripts.html.haml
@@ -6,7 +6,7 @@
 - #  %script{:src => 'http://include.reinvigorate.net/re_.js'}
 %script{:src => '/javascripts/analytics.js'}
 %script{:src => '/javascripts/ga.js'}
-- # %script{:src => '/javascripts/uservoice.js'}
+%script{:src => '/javascripts/uservoice.js'}
 %script{:src => '/javascripts/color_picker/colorpicker.js'}
 %script{:src => '/javascripts/charCount.js'}
 %script{:src => '/javascripts/mediaelement-and-player.min.js'}
