--- a/app/views/users/_create_form.html.haml
+++ b/app/views/users/_create_form.html.haml
@@ -12,7 +12,7 @@
   %p
     = f.label :email, t("users.email address")
     %br
-    = f.text_field :email
+    = f.text_field :email, class: "autofocus"
   %p
     = f.label :username, t("users.user name")
     %br
