--- a/app/views/shared/_widget_sign_in.html.haml
+++ b/app/views/shared/_widget_sign_in.html.haml
@@ -2,4 +2,4 @@
   %aside.sign_in
     %p
       %b= t("have an account?")
-      %span.float_right{style: "margin-left: 10px; margin-top: 3px"}= link_to t("sign in"), sign_in_path
+      %span.float_right{style: "margin-left: 10px; margin-top: 3px"}= link_to t("sign in"), sign_in_path(redirect: params[:redirect])
