--- a/app/views/shared/_widget_sign_up.html.haml
+++ b/app/views/shared/_widget_sign_up.html.haml
@@ -2,4 +2,5 @@
   %aside.sign_up
     %p
       %b= t("no account?")
-      %span.float_right{style: "margin-left: 10px; margin-top: 3px"}= link_to t("sign up"), sign_up_path
+      - redirect = params[:redirect] || (request.referer ? URI(request.referer).path : nil)
+      %span.float_right{style: "margin-left: 10px; margin-top: 3px"}= link_to t("sign up"), sign_up_path(redirect: redirect)
