sexy inline danger confirmation implemented for a div/span containing a link and for inputs. #devnote: user confirm class on input or link container and data-confirm attribute on input or link to use this.

--- a/app/assets/sass/_global_html.sass
+++ b/app/assets/sass/_global_html.sass
@@ -54,8 +54,11 @@ small,
   line-height: 1.3
   padding-left: 20px
   
-.caution a
+.danger a
   color: $red
+input.danger
+  border-color: $red !important
+  color: $red !important
   
 .dark_highlight
   color: $gray_light
