--- a/app/views/bookmarks/_list_item.html.haml
+++ b/app/views/bookmarks/_list_item.html.haml
@@ -13,7 +13,7 @@
       - if @me
         %span= link_to('edit', edit_bookmark_path(list_item.id))
         &mdash;
-        %span.caution= link_to('delete', bookmark_path(list_item.id), :confirm => t("bookmarks.confirm delete"), :method => :delete) 
+        %span.confirm= link_to('delete', bookmark_path(list_item.id), "data-confirm" => t("bookmarks.confirm delete"), :method => :delete) 
         &mdash;
       %span.created_as_date= t('created ago', time_ago: time_ago_in_words(list_item.created_as_date))
   - if list_item.labels
