--- a/app/views/users/_connections_tabs.html.haml
+++ b/app/views/users/_connections_tabs.html.haml
@@ -13,8 +13,7 @@
   - if @user.connections[@show]
     %p
       = t('connected as user', connection: t(@show), username: @user.connections[@show].data.screen_name)
-      %span.caution
-        - puts "--- hey, delete_connection_path(@show.to_sym) is #{delete_connection_path(@show.to_sym)}"
+      %span.confirm
         %a{:href => delete_connection_path(@show.to_sym), "data-confirm" => "Are you sure?", "data-method" => "delete", :rel => "nofollow"}= t('remove connection')
     %p= t('connection users', connection: t(@show))
     = render partial: "list"
