--- a/app/views/users/devices.html.haml
+++ b/app/views/users/devices.html.haml
@@ -3,7 +3,7 @@
 %ul.big_list
   - @devices.each do |d|
     %li
-      %div.float_right.caution= link_to t('remove'), device_path(d.id), method: :delete, confirm: t('are you sure')
+      %div.float_right.confirm= link_to t('remove'), device_path(d.id), method: :delete, "data-confirm" => t('are you sure')
       %h4= "#{d.vendor} #{d.model}"
       %p.mute.negative_gutter_top_half
         = d.os
