one line of change for notes parallel thingy

--- a/app/views/shared/_widget_parallel_notes.html.haml
+++ b/app/views/shared/_widget_parallel_notes.html.haml
@@ -44,7 +44,7 @@
       - #   %a{:class => "color", :href => "#", :style => "background-color:#a8ed9d"}
       - #   %a{:class => "color", :href => "#", :style => "background-color:#f3a9a9"}
       = f.hidden_field :reference, class: "verses_selected_input"
-      %div.parallel_notes_submit
+      %div.parallel_notes_submit.clearfix
         %button.action_button_green.float_right
           = t('notes.save')
         %a.cancel.warning.float_left
