--- a/app/views/shared/_javascripts.html.haml
+++ b/app/views/shared/_javascripts.html.haml
@@ -1,4 +1,7 @@
 %script{:src => '/javascripts/jquery.js'}
+%script{:src => '/javascripts/wysiwyg/jquery.wysiwyg.js'}
+%script{:src => '/javascripts/wysiwyg/wysiwyg.image.js'}
+%script{:src => '/javascripts/wysiwyg/wysiwyg.link.js'}
 %script{:src => '/javascripts/spin.min.js'}
 %script{:src => '/javascripts/ZeroClipboard.js'}
 %script{:src => '/javascripts/application.js'}
