--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -11,6 +11,7 @@
 <![endif]-->
 
 %link{:rel => 'stylesheet', :href => '/stylesheets/application.css'}
+%link{:rel => 'stylesheet', :href => '/stylesheets/wysiwyg/jquery.wysiwyg.css'}
 
 <!--[if IE 9]>
 %link{:rel => 'stylesheet', :href => '/stylesheets/ie9.css'}
