added t and s styling, fixes #72

--- a/app/assets/sass/_main_reader.sass
+++ b/app/assets/sass/_main_reader.sass
@@ -270,6 +270,26 @@
   padding: 2px 4px 3px
   vertical-align: top
 
+.trans, .study
+  +round
+  +background-image(linear-gradient(#eee, #ddd))
+  background-color: #eee
+  border-top: 1px solid #ccc
+  color: #666
+  cursor: pointer
+  display: inline-block
+  font:
+    family: $body_font
+    size: 10px
+    weight: bold
+  line-height: 1
+  margin:
+    top: 4px
+    right: 2px
+    bottom: 5px
+  padding: 2px 4px 3px
+  vertical-align: top
+
 .verse.dark_highlight
   color: $gray_light
 
