moved language groups around so locale would be first (search view)

--- a/app/views/pages/donate.html.haml
+++ b/app/views/pages/donate.html.haml
@@ -33,7 +33,7 @@
     - # %a{:href => '#'}= image_tag '/images/donate_with_paypal.png'
   %hr
   %p.narrow.callout.gutter_bottom_half= t('donate.subhead')
-  %p.narrow.gutter_bottom_half= t('donate.copy')
+  %p.narrow.gutter_bottom_half= t('donate.copy').html_safe
 /   %p.gutter_bottom_half
 /     %b
 /       Set Up Monthly Giving
