--- a/app/views/shared/_menu_book_chapter.html.haml
+++ b/app/views/shared/_menu_book_chapter.html.haml
@@ -1,4 +1,6 @@
 #menu_book_chapter.dynamic_menu
+  .spinner_wrapper{style: "display: none;"}
+    #book_chapter_spinner.dynamic_menu_spinner
   %span.menu_arrow
     &nbsp;
   #menu_book
