--- a/app/cells/version_selector/display.html.haml
+++ b/app/cells/version_selector/display.html.haml
@@ -1,4 +1,6 @@
 #menu_version.dynamic_menu
+  .spinner_wrapper{style: "display: none;"}
+    #version_spinner.dynamic_menu_spinner
   %span.menu_arrow
     &nbsp;
   .scroll
@@ -8,19 +10,21 @@
       - @this_language.each do |k, v|
         %tr
           %th
-            %a{:href => @reference ? bible_path(@reference.merge(version: v.osis)) : '#'}= k.upcase.match(/\A[^-]*/)
+            %a.spinner_trigger{:href => @reference ? bible_path(@reference.merge(version: v.osis)) : '#'}= k.upcase.match(/\A[^-]*/)
           %td
-            %a{:href => @reference ? bible_path(@reference.merge(version: v.osis)) : '#'}= v.title
+            %a.spinner_trigger{:href => @reference ? bible_path(@reference.merge(version: v.osis)) : '#'}= v.title
       - @all_languages.each do |k, v|
         %tr
           %th{:colspan => '2'}= @languages[k]
         - v.each do |kk, vv|
           %tr
             %th
-              %a{:href => @reference ? bible_path(@reference.merge(version: vv.osis)) : '#'}= kk.upcase.match(/\A[^-]*/)
+              %a.spinner_trigger{:href => @reference ? bible_path(@reference.merge(version: vv.osis)) : '#'}= kk.upcase.match(/\A[^-]*/)
             %td
-              %a{:href => @reference ? bible_path(@reference.merge(version: vv.osis)) : '#'}= vv.title
+              %a.spinner_trigger{:href => @reference ? bible_path(@reference.merge(version: vv.osis)) : '#'}= vv.title
 #menu_alt_version.dynamic_menu
+  .spinner_wrapper{style: "display: none;"}
+    #version_spinner.dynamic_menu_spinner
   %span.menu_arrow
     &nbsp;
   .scroll
@@ -30,16 +34,16 @@
       - @this_language.each do |k, v|
         %tr
           %th
-            %a.alt_version_link{"data-version" => v.osis, :href => '#'}= k.upcase.match(/\A[^-]*/) #JS will set cookie and reload page
+            %a.spinner_trigger.alt_version_link{"data-version" => v.osis, :href => '#'}= k.upcase.match(/\A[^-]*/) #JS will set cookie and reload page
           %td
-            %a.alt_version_link{"data-version" => v.osis, :href => '#'}= v.title #JS will set cookie and reload page
+            %a.spinner_trigger.alt_version_link{"data-version" => v.osis, :href => '#'}= v.title #JS will set cookie and reload page
       - @all_languages.each do |k, v|
         %tr
           %th{:colspan => '2'}= @languages[k]
         - v.each do |kk, vv|
           %tr
             %th
-              %a.alt_version_link{"data-version" => vv.osis, :href => '#'}= kk.upcase.match(/\A[^-]*/) #JS will set cookie and reload page
+              %a.spinner_trigger.alt_version_link{"data-version" => vv.osis, :href => '#'}= kk.upcase.match(/\A[^-]*/) #JS will set cookie and reload page
             %td
-              %a.alt_version_link{"data-version" => vv.osis, :href => '#'}= vv.title #JS will set cookie and reload page
+              %a.spinner_trigger.alt_version_link{"data-version" => vv.osis, :href => '#'}= vv.title #JS will set cookie and reload page
 
