adds sexy reading plan un-authed start routing to start plan and land on reading day once registered or signed in

--- a/app/views/plans/_default_sidebar.html.haml
+++ b/app/views/plans/_default_sidebar.html.haml
@@ -6,7 +6,7 @@
       - else
         = link_to(t('plans.subscribe to plan'), plan_start_path(@plan), :class => 'action_button_green', style: "margin-bottom: 10px")
     - else 
-      = link_to(t('plans.subscribe to plan'), sign_up_path(source: "plan", id: @plan.id), class: 'action_button_green', style: "margin-bottom: 10px")
+      = link_to(t('plans.subscribe to plan'), sign_up_path(source: "plan", id: @plan.id, redirect: plan_start_path(@plan)), class: 'action_button_green', style: "margin-bottom: 10px")
   .widget
     %header
       %span
