--- a/app/views/pages/l10n.html.haml
+++ b/app/views/pages/l10n.html.haml
@@ -3,11 +3,11 @@
   .widget.volunteer_translate
     %header
       %span
-        YouVersion in your language!
+        YouVersion in Your Language!
     %ul.widget_menu
       %li
         %p
-          = "Our volunteer translators are working hard to make YouVersion available in many languages &ndash; more every year! If you want to help make YouVersion localized for your lanaguage, we want your help!".html_safe
+          = "Our volunteer translators are working hard to make YouVersion available in many languages &ndash; more every month! If you want to help make YouVersion localized for your lanaguage, we would love your help!".html_safe
       %li
         = link_to("Visit the YouVersion Volunteer Site", "http://volunteer.youversion.com/become-a-volunteer")
 
